add swager plugin
